syntax = "proto3";

option csharp_namespace = "Auth";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc VerifyOtpAndLogin (VerifyOtpLoginRequest) returns (AuthResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (AuthResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string name = 3;
  string surname = 4;
  string phone_number = 5;
  string email = 6;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message VerifyOtpLoginRequest {
  string username = 1;
  string otp_code = 2;
}

message LogoutRequest {
  string refresh_token = 1;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message AuthResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
  string refresh_token = 4;
  UserInfo user = 5;
  bool otp_required = 6;
}

message UserInfo {
  int32 id = 1;
  string username = 2;
  string name = 3;
  string surname = 4;
  string phone_number = 5;
  repeated string roles = 6;
}
